# MOSAICapp

./: .gitignore  CITATION.cff  Dockerfile  LICENSE  Makefile  README.md  app.py  app2.0.py  app2.py  app_with_LLM.py  check_reassignments.py  plot_bertopic_zeroshot_coverage.py  plot_threshold_comparison.py  prompt.txt  pyproject.toml  replot_MPE.py  replot_NDE.py  requirements.lock.txt  requirements.txt  run_embed.py  run_embed.sh  run_embed_5MeO.py  run_embed_5MeO.sh  run_embed_MPE.py  run_embed_MPE.sh  run_embeddings.py  run_embeddings.sh  run_optuna.py  run_optuna.sh  run_optuna_5MeO.sh  run_optuna_MPE.sh  run_pipeline.py  run_pipeline.sh  run_pipeline_5MeO.py  run_pipeline_5MeO.sh  run_pipeline_70b.sh  run_pipeline_MPE.py  run_pipeline_MPE.sh  run_pipeline_NDE_t1.sh  run_pipeline_NDE_t70.sh  (+6 more)
.github/workflows/: draft-pdf.yml  tests.yml
.streamlit/: config.toml
data/INNERSPEECH/preprocessed/: run_history.json  uploaded.csv
data/INNERSPEECH/preprocessed/cache/: precomputed_uploaded_Qwen_Qwen3-Embedding-0_6B_sentences_embeddings.npy  precomputed_uploaded_intfloat_multilingual-e5-large-instruct_reports_embeddings.npy  precomputed_uploaded_intfloat_multilingual-e5-large-instruct_sentences_embeddings.npy  precomputed_uploaded_reports_docs.npy  (+1 more)
data/mosaic/preprocessed/: run_history.json
eval/INNERSPEECH/: topic_sentences_uploaded_sentences.csv  topics_uploaded_sentences.jsonl
mosaic_core/: core_functions.py
paper/: paper.bib  paper.md
tests/: conftest.py  dummy_dataset.csv  test_core_functions.py  test_imports.py  test_integration.py  test_utils.py  tests.md
